test/reverseWrongNargs.slq

def foo(x:ğ”¹,y:ğ”¹)mfreeâ‡’(x,y);
def main(){
	foo(x,y,z):=(0,1):ğ”¹^2; // error
	return (x,y); // error
}
